# koza-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  api_server.py  app.js  config.py  core.py  core.py_old  core_context.py  docker-compose.yml  index.html  install.ps1  install.py  install.sh  koza_daemon.py  koza_main.py  koza_run.py  main.py  mkdocs.yml  progress_notes.md  prompt.py  prompt_loader.py  pyproject.toml  requirements.txt  router.py  run.bat  style.css  test_calculator.py  tg_bot.py  tree.txt
.github/workflows/: ci.yml
agent/: core.py
agent/providers/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py
bots/: telegram.py  telegram_keyboards.py  telegram_notifier.py
changelog/: 1.5.0.md  1.6.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.42.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md  v1.4.5.md  v1.4.51.md  v1.4.52.md  v1.4.6.md  v1.42.1.md  v1.5.0.md  v1.5.1.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md
cli/: chat.py  cmd_sync.py  coding_cmd.py  commands.py  daemon.py  i18n.py  input_dispatcher.py  permissions.py  setup.py  setup_constants.py  setup_helpers.py  tray.py  tui_cmd.py  typer_app.py  ui.py  ui_cmd.py  uninstall_cmd.py  update_cmd.py  voice_cmd.py
core/: context_compressor.py
docs/: configuration.md  installation.md  kanban-cron.md  memory.md  messaging.md  self-sufficiency-analysis.md  skills.md  subagents.md
koza-installer/: install.bat  setup.ps1
koza_main/: __init__.py
locales/: en.yaml  tr.yaml
providers/: anthropic_oauth_provider.py  anthropic_provider.py  antigravity_provider.py  base.py  codex_provider.py  deepseek_provider.py  error_classifier.py  factory.py  fallback_provider.py  gemini_provider.py  github_provider.py  google_oauth_provider.py  groq_provider.py  kimi_provider.py  kiro_provider.py  lm_studio_provider.py  minimax_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  portal_provider.py  think_scrubber.py  zai_provider.py
scratch/: check_html.py
skills/: agents.py  brain_skill.py  browser_control.py  code_runner.py  code_tools.py  config_manager.py  creative.py  cron.py  cron_db.py  cron_scheduler.py  datascience.py  delegation.py  devops.py  email_skill.py  environments.py  filesystem.py  finance.py  flow_skill.py  gaming.py  github_skill.py  hands_skill.py  image_gen.py  kanban.py  mcp_skill.py  media.py  messaging.py  mlops.py  notes.py  plugin_loader.py  productivity.py  reminder.py  repo_manager.py  research.py  security.py  session_memory.py  shared_memory.py  shell.py  skill_ecosystem.py  smarthome.py  social.py  (+6 more)
tests/: test_custom_base_url.py  test_telegram_auto_delegation.py
tools/: capabilities.py  middleware.py  registry.py  test_trim.py
tui/: chat_app.py  event_adapter.py  kanban_app.py  setup_wizard.py
ui/: .dockerignore  .gitignore  AGENTS.md  README.tr.md  bunfig.toml  flake.nix  gui_app.py  install  package.json  sst.config.ts  turbo.json
utils/: auxiliary_client.py  json_utils.py  model_metadata.py  system_utils.py
(+129 files in other folders)
