[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "koza"
version = "0.1.0"
description = "Koza — AI agent with tools, memory, and TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.61.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-genai>=0.7.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pyfiglet>=1.0.2",
    "yt-dlp>=2024.1.1",
    "spotipy>=2.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    "python-whois>=0.9.4",
    "paho-mqtt>=2.0.0",
]

[project.scripts]
koza = "koza_main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"" = "."
