[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "koza"
version = "1.41.32"
description = "Koza — autonomous AI agent with tools and memory"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-genai>=0.7.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pyfiglet>=1.0.2",
    "yt-dlp>=2024.1.1",
    "spotipy>=2.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    "python-whois>=0.9.4",
    "paho-mqtt>=2.0.0",
    "packaging>=23.0",
    "pygments>=2.17.0",
    "gemini-webapi>=2.0.0",
    "curl_cffi>=0.7.0",
    "orjson>=3.9.0",
    "browser-cookie3>=0.19.1",
    "playwright>=1.45.0",
    "pypdf>=4.0.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
tui = ["textual>=0.61.0"]
full = [
    "textual>=0.61.0",
]

[project.scripts]
koza = "koza_run:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"" = "."
